crates/dora-compiler/src/dora/tests/snapshots/dora_compiler__dora__tests__operations__push_create_with_value.snap
---
source: crates/dora-compiler/src/dora/tests/operations.rs
expression: op
snapshot_kind: text
---
module {
  llvm.mlir.global internal @dora_global_stack_ptr() {addr_space = 0 : i32} : !llvm.ptr
  llvm.mlir.global internal @dora_global_stack_length() {addr_space = 0 : i32} : i64
  llvm.mlir.global internal @dora_global_memory_ptr() {addr_space = 0 : i32} : !llvm.ptr
  llvm.mlir.global internal @dora_global_memory_size() {addr_space = 0 : i32} : i64
  llvm.mlir.global internal @dora_global_calldata_ptr() {addr_space = 0 : i32} : !llvm.ptr
  llvm.mlir.global internal @dora_global_calldata_size() {addr_space = 0 : i32} : i64
  llvm.mlir.global internal @dora_global_gas_counter() {addr_space = 0 : i32} : i64
  llvm.mlir.global external @dora_global_ctx_is_static() {addr_space = 0 : i32} : !llvm.ptr
  func.func private @dora_fn_tracing(!llvm.ptr, i8, i64)
  func.func private @dora_fn_write_result(!llvm.ptr, i64, i64, i64, i8)
  func.func private @dora_fn_keccak256_hasher(!llvm.ptr, i64, i64, !llvm.ptr)
  func.func private @dora_fn_calldata(!llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_calldata_size(!llvm.ptr) -> i64
  func.func private @dora_fn_chainid(!llvm.ptr) -> i64
  func.func private @dora_fn_callvalue(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_caller(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_store_in_gasprice_ptr(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_store_in_selfbalance_ptr(!llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_store_in_blobbasefee_ptr(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_gaslimit(!llvm.ptr) -> i64
  func.func private @dora_fn_extend_memory(!llvm.ptr, i64) -> !llvm.ptr
  func.func private @dora_fn_code_copy(!llvm.ptr, i64, i64, i64)
  func.func private @dora_fn_sload(!llvm.ptr, !llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_sstore(!llvm.ptr, !llvm.ptr, !llvm.ptr, i64) -> !llvm.ptr
  func.func private @dora_fn_append_log(!llvm.ptr, i64, i64)
  func.func private @dora_fn_append_log_with_one_topic(!llvm.ptr, i64, i64, !llvm.ptr)
  func.func private @dora_fn_append_log_with_two_topics(!llvm.ptr, i64, i64, !llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_append_log_with_three_topics(!llvm.ptr, i64, i64, !llvm.ptr, !llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_append_log_with_four_topics(!llvm.ptr, i64, i64, !llvm.ptr, !llvm.ptr, !llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_origin(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_coinbase(!llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_block_number(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_extcodesize(!llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_address(!llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_prevrando(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_store_in_timestamp_ptr(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_store_in_basefee_ptr(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_call(!llvm.ptr, i64, !llvm.ptr, !llvm.ptr, i64, i64, i64, i64, i64, i8) -> !llvm.ptr
  func.func private @dora_fn_store_in_balance(!llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_ext_code_copy(!llvm.ptr, !llvm.ptr, i64, i64, i64) -> !llvm.ptr
  func.func private @dora_fn_blob_hash(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_block_hash(!llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_ext_code_hash(!llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_create(!llvm.ptr, i64, i64, !llvm.ptr, i64) -> !llvm.ptr
  func.func private @dora_fn_create2(!llvm.ptr, i64, i64, !llvm.ptr, i64, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_returndata_size(!llvm.ptr) -> i64
  func.func private @dora_fn_returndata_copy(!llvm.ptr, i64, i64, i64) -> !llvm.ptr
  func.func private @dora_fn_selfdestruct(!llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_tload(!llvm.ptr, !llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_tstore(!llvm.ptr, !llvm.ptr, !llvm.ptr)
  func.func public @main(%arg0: !llvm.ptr, %arg1: i64) -> i8 attributes {llvm.emit_c_interface} {
    %c1024_i256 = arith.constant 1024 : i256
    %0 = llvm.alloca %c1024_i256 x i256 : (i256) -> !llvm.ptr
    %1 = llvm.mlir.addressof @dora_global_stack_ptr : !llvm.ptr
    llvm.store %0, %1 : !llvm.ptr, !llvm.ptr
    %c0_i64 = arith.constant 0 : i64
    %2 = llvm.mlir.addressof @dora_global_stack_length : !llvm.ptr
    llvm.store %c0_i64, %2 : i64, !llvm.ptr
    %c0_i64_0 = arith.constant 0 : i64
    %3 = llvm.mlir.addressof @dora_global_memory_size : !llvm.ptr
    llvm.store %c0_i64_0, %3 : i64, !llvm.ptr
    %4 = call @dora_fn_calldata(%arg0) : (!llvm.ptr) -> !llvm.ptr
    %5 = llvm.mlir.addressof @dora_global_calldata_ptr : !llvm.ptr
    llvm.store %4, %5 : !llvm.ptr, !llvm.ptr
    %6 = call @dora_fn_calldata_size(%arg0) : (!llvm.ptr) -> i64
    %7 = llvm.mlir.addressof @dora_global_calldata_size : !llvm.ptr
    llvm.store %6, %7 : i64, !llvm.ptr
    %8 = llvm.mlir.addressof @dora_global_gas_counter : !llvm.ptr
    llvm.store %arg1, %8 : i64, !llvm.ptr
    cf.br ^bb5
  ^bb1(%9: i8):  // 20 preds: ^bb2, ^bb4, ^bb5, ^bb8, ^bb9, ^bb12, ^bb13, ^bb15, ^bb16, ^bb17, ^bb19, ^bb20, ^bb21, ^bb23, ^bb24, ^bb27, ^bb28, ^bb29, ^bb32, ^bb33
    %c0_i64_1 = arith.constant 0 : i64
    %10 = llvm.mlir.addressof @dora_global_gas_counter : !llvm.ptr
    %11 = llvm.load %10 : !llvm.ptr -> i64
    call @dora_fn_write_result(%arg0, %c0_i64_1, %c0_i64_1, %11, %9) : (!llvm.ptr, i64, i64, i64, i8) -> ()
    return %9 : i8
  ^bb2(%12: i256):  // no predecessors
    %c89_i8 = arith.constant 89 : i8
    cf.switch %12 : i256, [
      default: ^bb1(%c89_i8 : i8)
    ]
  ^bb3:  // pred: ^bb4
    %c100_i256 = arith.constant 100 : i256
    %13 = llvm.mlir.addressof @dora_global_stack_ptr : !llvm.ptr
    %14 = llvm.load %13 : !llvm.ptr -> !llvm.ptr
    llvm.store %c100_i256, %14 : i256, !llvm.ptr
    %15 = llvm.getelementptr %14[1] : (!llvm.ptr) -> !llvm.ptr, i256
    llvm.store %15, %13 : !llvm.ptr, !llvm.ptr
    cf.br ^bb9
  ^bb4:  // pred: ^bb6
    %16 = llvm.mlir.addressof @dora_global_stack_length : !llvm.ptr
    %c1024_i64 = arith.constant 1024 : i64
    %17 = llvm.load %16 : !llvm.ptr -> i64
    %c1_i64 = arith.constant 1 : i64
    %18 = arith.addi %17, %c1_i64 : i64
    llvm.store %18, %16 : i64, !llvm.ptr
    %19 = arith.cmpi ult, %c1024_i64, %18 : i64
    %c92_i8 = arith.constant 92 : i8
    cf.cond_br %19, ^bb1(%c92_i8 : i8), ^bb3
  ^bb5:  // pred: ^bb0
    %20 = llvm.mlir.addressof @dora_global_gas_counter : !llvm.ptr
    %21 = llvm.load %20 : !llvm.ptr -> i64
    %c3_i64 = arith.constant 3 : i64
    %22 = arith.cmpi uge, %21, %c3_i64 : i64
    %c80_i8 = arith.constant 80 : i8
    cf.cond_br %22, ^bb6, ^bb1(%c80_i8 : i8)
  ^bb6:  // pred: ^bb5
    %23 = arith.subi %21, %c3_i64 : i64
    llvm.store %23, %20 : i64, !llvm.ptr
    cf.br ^bb4
  ^bb7:  // pred: ^bb8
    %c0_i256 = arith.constant 0 : i256
    %24 = llvm.mlir.addressof @dora_global_stack_ptr : !llvm.ptr
    %25 = llvm.load %24 : !llvm.ptr -> !llvm.ptr
    llvm.store %c0_i256, %25 : i256, !llvm.ptr
    %26 = llvm.getelementptr %25[1] : (!llvm.ptr) -> !llvm.ptr, i256
    llvm.store %26, %24 : !llvm.ptr, !llvm.ptr
    cf.br ^bb13
  ^bb8:  // pred: ^bb10
    %27 = llvm.mlir.addressof @dora_global_stack_length : !llvm.ptr
    %c1024_i64_2 = arith.constant 1024 : i64
    %28 = llvm.load %27 : !llvm.ptr -> i64
    %c1_i64_3 = arith.constant 1 : i64
    %29 = arith.addi %28, %c1_i64_3 : i64
    llvm.store %29, %27 : i64, !llvm.ptr
    %30 = arith.cmpi ult, %c1024_i64_2, %29 : i64
    %c92_i8_4 = arith.constant 92 : i8
    cf.cond_br %30, ^bb1(%c92_i8_4 : i8), ^bb7
  ^bb9:  // pred: ^bb3
    %31 = llvm.mlir.addressof @dora_global_gas_counter : !llvm.ptr
    %32 = llvm.load %31 : !llvm.ptr -> i64
    %c3_i64_5 = arith.constant 3 : i64
    %33 = arith.cmpi uge, %32, %c3_i64_5 : i64
    %c80_i8_6 = arith.constant 80 : i8
    cf.cond_br %33, ^bb10, ^bb1(%c80_i8_6 : i8)
  ^bb10:  // pred: ^bb9
    %34 = arith.subi %32, %c3_i64_5 : i64
    llvm.store %34, %31 : i64, !llvm.ptr
    cf.br ^bb8
  ^bb11:  // pred: ^bb12
    %c40_i256 = arith.constant 40 : i256
    %35 = llvm.mlir.addressof @dora_global_stack_ptr : !llvm.ptr
    %36 = llvm.load %35 : !llvm.ptr -> !llvm.ptr
    llvm.store %c40_i256, %36 : i256, !llvm.ptr
    %37 = llvm.getelementptr %36[1] : (!llvm.ptr) -> !llvm.ptr, i256
    llvm.store %37, %35 : !llvm.ptr, !llvm.ptr
    cf.br ^bb24
  ^bb12:  // pred: ^bb14
    %38 = llvm.mlir.addressof @dora_global_stack_length : !llvm.ptr
    %c1024_i64_7 = arith.constant 1024 : i64
    %39 = llvm.load %38 : !llvm.ptr -> i64
    %c1_i64_8 = arith.constant 1 : i64
    %40 = arith.addi %39, %c1_i64_8 : i64
    llvm.store %40, %38 : i64, !llvm.ptr
    %41 = arith.cmpi ult, %c1024_i64_7, %40 : i64
    %c92_i8_9 = arith.constant 92 : i8
    cf.cond_br %41, ^bb1(%c92_i8_9 : i8), ^bb11
  ^bb13:  // pred: ^bb7
    %42 = llvm.mlir.addressof @dora_global_gas_counter : !llvm.ptr
    %43 = llvm.load %42 : !llvm.ptr -> i64
    %c3_i64_10 = arith.constant 3 : i64
    %44 = arith.cmpi uge, %43, %c3_i64_10 : i64
    %c80_i8_11 = arith.constant 80 : i8
    cf.cond_br %44, ^bb14, ^bb1(%c80_i8_11 : i8)
  ^bb14:  // pred: ^bb13
    %45 = arith.subi %43, %c3_i64_10 : i64
    llvm.store %45, %42 : i64, !llvm.ptr
    cf.br ^bb12
  ^bb15:  // pred: ^bb23
    %46 = llvm.mlir.addressof @dora_global_stack_ptr : !llvm.ptr
    %47 = llvm.load %46 : !llvm.ptr -> !llvm.ptr
    %48 = llvm.getelementptr %47[-1] : (!llvm.ptr) -> !llvm.ptr, i256
    %49 = llvm.load %48 : !llvm.ptr -> i256
    llvm.store %48, %46 : !llvm.ptr, !llvm.ptr
    %50 = llvm.mlir.addressof @dora_global_stack_ptr : !llvm.ptr
    %51 = llvm.load %50 : !llvm.ptr -> !llvm.ptr
    %52 = llvm.getelementptr %51[-1] : (!llvm.ptr) -> !llvm.ptr, i256
    %53 = llvm.load %52 : !llvm.ptr -> i256
    llvm.store %52, %50 : !llvm.ptr, !llvm.ptr
    %54 = llvm.mlir.addressof @dora_global_stack_ptr : !llvm.ptr
    %55 = llvm.load %54 : !llvm.ptr -> !llvm.ptr
    %56 = llvm.getelementptr %55[-1] : (!llvm.ptr) -> !llvm.ptr, i256
    %57 = llvm.load %56 : !llvm.ptr -> i256
    llvm.store %56, %54 : !llvm.ptr, !llvm.ptr
    %58 = llvm.mlir.addressof @dora_global_ctx_is_static : !llvm.ptr
    %59 = llvm.load %58 : !llvm.ptr -> i1
    %c87_i8 = arith.constant 87 : i8
    cf.cond_br %59, ^bb1(%c87_i8 : i8), ^bb16
  ^bb16:  // pred: ^bb15
    %60 = arith.trunci %53 : i256 to i64
    %c0_i64_12 = arith.constant 0 : i64
    %61 = arith.cmpi slt, %60, %c0_i64_12 : i64
    %c84_i8 = arith.constant 84 : i8
    cf.cond_br %61, ^bb1(%c84_i8 : i8), ^bb17
  ^bb17:  // pred: ^bb16
    %62 = arith.trunci %57 : i256 to i64
    %c0_i64_13 = arith.constant 0 : i64
    %63 = arith.cmpi slt, %62, %c0_i64_13 : i64
    %c84_i8_14 = arith.constant 84 : i8
    cf.cond_br %63, ^bb1(%c84_i8_14 : i8), ^bb18
  ^bb18:  // pred: ^bb17
    %c0_i64_15 = arith.constant 0 : i64
    %64 = arith.cmpi ne, %62, %c0_i64_15 : i64
    cf.cond_br %64, ^bb27, ^bb19
  ^bb19:  // 2 preds: ^bb18, ^bb31
    %c32000_i64 = arith.constant 32000 : i64
    %65 = llvm.mlir.addressof @dora_global_gas_counter : !llvm.ptr
    %66 = llvm.load %65 : !llvm.ptr -> i64
    %67 = arith.cmpi ult, %66, %c32000_i64 : i64
    scf.if %67 {
    } else {
      %132 = arith.subi %66, %c32000_i64 : i64
      llvm.store %132, %65 : i64, !llvm.ptr
    }
    %c80_i8_16 = arith.constant 80 : i8
    cf.cond_br %67, ^bb1(%c80_i8_16 : i8), ^bb20
  ^bb20:  // pred: ^bb19
    %c1_i256 = arith.constant 1 : i256
    %68 = llvm.alloca %c1_i256 x i256 : (i256) -> !llvm.ptr
    llvm.store %49, %68 {alignment = 1 : i64} : i256, !llvm.ptr
    %69 = llvm.mlir.addressof @dora_global_gas_counter : !llvm.ptr
    %70 = llvm.load %69 : !llvm.ptr -> i64
    %71 = call @dora_fn_create(%arg0, %62, %60, %68, %70) : (!llvm.ptr, i64, i64, !llvm.ptr, i64) -> !llvm.ptr
    %72 = llvm.getelementptr %71[0] : (!llvm.ptr) -> !llvm.ptr, i8
    %73 = llvm.load %72 : !llvm.ptr -> i8
    %c0_i8 = arith.constant 0 : i8
    %74 = arith.cmpi ne, %73, %c0_i8 : i8
    cf.cond_br %74, ^bb1(%73 : i8), ^bb21
  ^bb21:  // pred: ^bb20
    %75 = llvm.getelementptr %71[8] : (!llvm.ptr) -> !llvm.ptr, i8
    %76 = llvm.load %75 : !llvm.ptr -> i64
    %77 = llvm.mlir.addressof @dora_global_gas_counter : !llvm.ptr
    %78 = llvm.load %77 : !llvm.ptr -> i64
    %79 = arith.cmpi ult, %78, %76 : i64
    scf.if %79 {
    } else {
      %132 = arith.subi %78, %76 : i64
      llvm.store %132, %77 : i64, !llvm.ptr
    }
    %c80_i8_17 = arith.constant 80 : i8
    cf.cond_br %79, ^bb1(%c80_i8_17 : i8), ^bb22
  ^bb22:  // pred: ^bb21
    %80 = llvm.load %68 : !llvm.ptr -> i256
    %81 = llvm.mlir.addressof @dora_global_stack_ptr : !llvm.ptr
    %82 = llvm.load %81 : !llvm.ptr -> !llvm.ptr
    llvm.store %80, %82 : i256, !llvm.ptr
    %83 = llvm.getelementptr %82[1] : (!llvm.ptr) -> !llvm.ptr, i256
    llvm.store %83, %81 : !llvm.ptr, !llvm.ptr
    cf.br ^bb26
  ^bb23:  // pred: ^bb25
    %84 = llvm.mlir.addressof @dora_global_stack_length : !llvm.ptr
    %c1024_i64_18 = arith.constant 1024 : i64
    %85 = llvm.load %84 : !llvm.ptr -> i64
    %c-2_i64 = arith.constant -2 : i64
    %86 = arith.addi %85, %c-2_i64 : i64
    llvm.store %86, %84 : i64, !llvm.ptr
    %c3_i64_19 = arith.constant 3 : i64
    %87 = arith.cmpi ult, %85, %c3_i64_19 : i64
    %c91_i8 = arith.constant 91 : i8
    cf.cond_br %87, ^bb1(%c91_i8 : i8), ^bb15
  ^bb24:  // pred: ^bb11
    %88 = llvm.mlir.addressof @dora_global_gas_counter : !llvm.ptr
    %89 = llvm.load %88 : !llvm.ptr -> i64
    %c0_i64_20 = arith.constant 0 : i64
    %90 = arith.cmpi uge, %89, %c0_i64_20 : i64
    %c80_i8_21 = arith.constant 80 : i8
    cf.cond_br %90, ^bb25, ^bb1(%c80_i8_21 : i8)
  ^bb25:  // pred: ^bb24
    %91 = arith.subi %89, %c0_i64_20 : i64
    llvm.store %91, %88 : i64, !llvm.ptr
    cf.br ^bb23
  ^bb26:  // pred: ^bb22
    %c0_i64_22 = arith.constant 0 : i64
    %c1_i8 = arith.constant 1 : i8
    %92 = llvm.mlir.addressof @dora_global_gas_counter : !llvm.ptr
    %93 = llvm.load %92 : !llvm.ptr -> i64
    call @dora_fn_write_result(%arg0, %c0_i64_22, %c0_i64_22, %93, %c1_i8) : (!llvm.ptr, i64, i64, i64, i8) -> ()
    return %c1_i8 : i8
  ^bb27:  // pred: ^bb18
    %c49152_i64 = arith.constant 49152 : i64
    %94 = arith.cmpi ugt, %62, %c49152_i64 : i64
    %c100_i8 = arith.constant 100 : i8
    cf.cond_br %94, ^bb1(%c100_i8 : i8), ^bb28
  ^bb28:  // pred: ^bb27
    %c31_i64 = arith.constant 31 : i64
    %c32_i64 = arith.constant 32 : i64
    %95 = arith.addi %62, %c31_i64 : i64
    %96 = arith.divui %95, %c32_i64 : i64
    %c2_i64 = arith.constant 2 : i64
    %97 = arith.muli %96, %c2_i64 : i64
    %98 = llvm.mlir.addressof @dora_global_gas_counter : !llvm.ptr
    %99 = llvm.load %98 : !llvm.ptr -> i64
    %100 = arith.cmpi ult, %99, %97 : i64
    scf.if %100 {
    } else {
      %132 = arith.subi %99, %97 : i64
      llvm.store %132, %98 : i64, !llvm.ptr
    }
    %c80_i8_23 = arith.constant 80 : i8
    cf.cond_br %100, ^bb1(%c80_i8_23 : i8), ^bb29
  ^bb29:  // pred: ^bb28
    %101 = arith.addi %60, %62 : i64
    %c0_i64_24 = arith.constant 0 : i64
    %102 = arith.cmpi slt, %101, %c0_i64_24 : i64
    %c84_i8_25 = arith.constant 84 : i8
    cf.cond_br %102, ^bb1(%c84_i8_25 : i8), ^bb30
  ^bb30:  // pred: ^bb29
    %c31_i64_26 = arith.constant 31 : i64
    %c32_i64_27 = arith.constant 32 : i64
    %103 = arith.addi %101, %c31_i64_26 : i64
    %104 = arith.divui %103, %c32_i64_27 : i64
    %c32_i64_28 = arith.constant 32 : i64
    %105 = arith.muli %104, %c32_i64_28 : i64
    %106 = llvm.mlir.addressof @dora_global_memory_size : !llvm.ptr
    %107 = llvm.load %106 : !llvm.ptr -> i64
    %c31_i64_29 = arith.constant 31 : i64
    %c32_i64_30 = arith.constant 32 : i64
    %108 = arith.addi %107, %c31_i64_29 : i64
    %109 = arith.divui %108, %c32_i64_30 : i64
    %110 = arith.muli %109, %c32_i64_28 : i64
    %111 = arith.cmpi ult, %110, %105 : i64
    cf.cond_br %111, ^bb32, ^bb31
  ^bb31:  // 2 preds: ^bb30, ^bb34
    cf.br ^bb19
  ^bb32:  // pred: ^bb30
    %c3_i64_31 = arith.constant 3 : i64
    %c512_i64 = arith.constant 512 : i64
    %112 = arith.muli %109, %109 : i64
    %113 = arith.divui %112, %c512_i64 : i64
    %114 = arith.muli %109, %c3_i64_31 : i64
    %115 = arith.addi %113, %114 : i64
    %c3_i64_32 = arith.constant 3 : i64
    %c512_i64_33 = arith.constant 512 : i64
    %116 = arith.muli %104, %104 : i64
    %117 = arith.divui %116, %c512_i64_33 : i64
    %118 = arith.muli %104, %c3_i64_32 : i64
    %119 = arith.addi %117, %118 : i64
    %120 = arith.subi %119, %115 : i64
    %121 = llvm.mlir.addressof @dora_global_gas_counter : !llvm.ptr
    %122 = llvm.load %121 : !llvm.ptr -> i64
    %123 = arith.cmpi ult, %122, %120 : i64
    scf.if %123 {
    } else {
      %132 = arith.subi %122, %120 : i64
      llvm.store %132, %121 : i64, !llvm.ptr
    }
    %c80_i8_34 = arith.constant 80 : i8
    cf.cond_br %123, ^bb1(%c80_i8_34 : i8), ^bb33
  ^bb33:  // pred: ^bb32
    %124 = call @dora_fn_extend_memory(%arg0, %105) : (!llvm.ptr, i64) -> !llvm.ptr
    %125 = llvm.getelementptr %124[16] : (!llvm.ptr) -> !llvm.ptr, i8
    %126 = llvm.load %125 : !llvm.ptr -> !llvm.ptr
    %127 = llvm.getelementptr %124[0] : (!llvm.ptr) -> !llvm.ptr, i8
    %128 = llvm.load %127 : !llvm.ptr -> i8
    %c0_i8_35 = arith.constant 0 : i8
    %129 = arith.cmpi ne, %128, %c0_i8_35 : i8
    cf.cond_br %129, ^bb1(%128 : i8), ^bb34
  ^bb34:  // pred: ^bb33
    %130 = llvm.mlir.addressof @dora_global_memory_ptr : !llvm.ptr
    llvm.store %126, %130 : !llvm.ptr, !llvm.ptr
    %131 = llvm.mlir.addressof @dora_global_memory_size : !llvm.ptr
    llvm.store %105, %131 : i64, !llvm.ptr
    cf.br ^bb31
  }
}
